# event-tracer

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: helpers.cmake
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
examples/freertos/cmake/: FindFreeRTOS.cmake
perf-tools/: event.py  screen.py  texec  texec.py
scripts/: gprof.sh  memcheck.sh  release.py  test.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  assert.hpp  error.hpp  event.hpp  event_desc.hpp  event_registry.hpp  inplace_function.hpp  prohibit_copy_move.hpp  scope_guard.hpp  singleton.hpp  slab_allocator.hpp  slice.hpp  span.hpp  static_function.hpp  variant_helpers.hpp
src/freertos/: CMakeLists.txt  alloc_traces.cpp  alloc_traces.h  egroup_traces.h  power_traces.h  queue_traces.h  sbuff_traces.h  synch_traces.h  task_perf.cpp  task_perf.h  task_traces.cpp  task_traces.h  timer_traces.h  traces.cpp  traces.h
src/freertos/backend/: CMakeLists.txt  event_id.hpp  event_tracer.cpp  event_tracer.hpp  traces.cpp
src/freertos/client/: CMakeLists.txt  event_tracer_client.cpp  event_tracer_client.hpp  traces.cpp  traces.hpp
src/freertos/common/: CMakeLists.txt  common.hpp  context_marker.hpp  critical_section.hpp  event_id.hpp  freertos_tracer_types.hpp  global_interrupts.hpp  message.hpp  user_event_id.hpp
src/freertos/config/: CMakeLists.txt  FreeRTOSConfigEventTracer.h  FreeRTOSConfigExt.h  FreeRTOSTraces.h
src/freertos/event_tracer/: CMakeLists.txt  event.hpp  event_id.hpp  event_tracer.cpp  event_tracer.hpp
src/freertos/traces/: CMakeLists.txt  alloc_traces.cpp  alloc_traces.h  traces.cpp  traces.h
src/perf-tools/: event.py  texec.py
test/: CMakeLists.txt
test/core/: CMakeLists.txt  assert_test.cpp  error_assert_impl.hpp  error_test.cpp  event_registry_test.cpp  inplace_function_test.cpp
test/infra/: CMakeLists.txt  error_assert_impl.cpp
