option(TASK_TRACES   "Use task traces"             ON)
option(QUEUE_TRACES  "Use queue traces"            OFF)
option(SYNCH_TRACES  "Use synchronisation traces"  OFF)
option(SBUFF_TRACES  "Use stream buffer traces"    OFF)
option(TIMER_TRACES  "Use timer traces"            OFF)
option(POWER_TRACES  "Use power management traces" OFF)
option(ALLOC_TRACES  "Use allocation traces"       OFF)
option(EGROUP_TRACES "Use event group traces"      OFF)

message("FreeRTOS Tracer options:")
message("- TASK_TRACES   ${TASK_TRACES}")
message("- QUEUE_TRACES  ${QUEUE_TRACES}")
message("- SYNCH_TRACES  ${SYNCH_TRACES}")
message("- SBUFF_TRACES  ${SBUFF_TRACES}")
message("- TIMER_TRACES  ${TIMER_TRACES}")
message("- POWER_TRACES  ${POWER_TRACES}")
message("- ALLOC_TRACES  ${ALLOC_TRACES}")
message("- EGROUP_TRACES ${EGROUP_TRACES}")

add_library(freertos-traces STATIC traces.cpp alloc_traces.cpp)
target_include_directories(freertos-traces PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(freertos-traces PRIVATE freertos-event-tracer)

if(TASK_TRACES)
  target_compile_definitions(freertos-traces INTERFACE tracerUSE_TASK_TRACES)
endif()

if(ALLOC_TRACES)
  target_compile_definitions(freertos-traces INTERFACE tracerUSE_ALLOC_TRACES)
endif()
